added attributeDistribution to client side to determine max/min values added trait restriction to max of 2 by default added passion_jobs job_uri check for 3rd party mods

--- a/manifest.json
+++ b/manifest.json
@@ -16,6 +16,7 @@
     },
     "object_commands": {
       "stats_customization": [
+         "get_max_stats_command",    
          "change_stat_by_type_command",
          "get_all_traits_command",
          "add_trait_command",
